--- a/catalog/catalog.html
+++ b/catalog/catalog.html
@@ -6,18 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
     <nav>
         <ul>
-            <li><a href="../index.html">Главная</a></li>
-            <li><a href="#">Каталог</a></li>
-            <li><a href="#">Контакты</a></li>
+            <li><a class="nav-link" href="../index.html">Главная</a></li>
+            <li><a class="nav-link" href="#">Каталог</a></li>
+            <li><a class="nav-link" href="#">Контакты</a></li>
         </ul>
     </nav>
-    <h1>Каталог</h1>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut iusto sequi sint possimus numquam atque. Nemo quis
+    <h1 class="title-main">Каталог</h1>
+    <p class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut iusto sequi sint possimus numquam
+        atque. Nemo quis
         facere fuga, corrupti beatae dolores ea ipsa quibusdam cum ipsam, vitae error laborum quam corporis veritatis.
         Rem minima cumque illum labore, ipsa perspiciatis totam blanditiis unde, cupiditate sapiente repudiandae nulla
         doloremque vel et deleniti ab delectus non molestiae dolorem. Quae perspiciatis amet fugiat, totam vel hic fuga
@@ -28,14 +30,14 @@
         ullam eos magni, modi odit porro eveniet quae. Facilis neque distinctio aliquam natus eos numquam cumque?
         Impedit provident sequi deleniti corrupti est dolor reiciendis eos nisi officia, iure hic!</p>
     <img src="../img/1.jpg" alt="Продукт1" width="300px">
-    <h2>Название товара</h2>
-    <p>Описание товара</p>
+    <h2 class="title-level2">Название товара</h2>
+    <p class="text">Описание товара</p>
     <img src="../img/2.jpg" alt="Продукт2" width="300px">
-    <h2>Название товара</h2>
-    <p>Описание товара</p>
+    <h2 class="title-level2">Название товара</h2>
+    <p class="text">Описание товара</p>
     <img src="../img/3.jpg" alt="Продукт3" width="300px">
-    <h2>Название товара</h2>
-    <p>Описание товара</p>
+    <h2 class="title-level2">Название товара</h2>
+    <p class="text">Описание товара</p>
 </body>
 
 </html>
