--- a/index.html
+++ b/index.html
@@ -6,28 +6,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
     <nav>
         <ul>
-            <li><a href="#">Главная</a></li>
-            <li><a href="./catalog/catalog.html">Каталог</a></li>
-            <li><a href="#">Контакты</a></li>
+            <li><a class="nav-link" href="#">Главная</a></li>
+            <li><a class="nav-link" href="./catalog/catalog.html">Каталог</a></li>
+            <li><a class="nav-link" href="#">Контакты</a></li>
         </ul>
     </nav>
-    <h1>Главная страница</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora provident vero iusto voluptatibus cum, quo
+    <h1 class="title-main">Главная страница</h1>
+    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora provident vero iusto voluptatibus
+        cum, quo
         assumenda earum doloremque aliquam incidunt aperiam aliquid recusandae ipsum delectus eaque dicta excepturi
         nobis atque.</p>
-    <h2>Добро пожаловать на сайт</h2>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem neque repudiandae aliquam veritatis ducimus
+    <h2 class="title-level2">Добро пожаловать на сайт</h2>
+    <p class="text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem neque repudiandae aliquam veritatis
+        ducimus
         commodi at, accusantium quae qui velit praesentium eum earum maiores quam dicta laudantium laborum architecto
         tenetur.</p>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem neque repudiandae aliquam veritatis ducimus
+    <p class="text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem neque repudiandae aliquam veritatis
+        ducimus
         commodi at, accusantium quae qui velit praesentium eum earum maiores quam dicta laudantium laborum architecto
         tenetur.</p>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem neque repudiandae aliquam veritatis ducimus
+    <p class="text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem neque repudiandae aliquam veritatis
+        ducimus
         commodi at, accusantium quae qui velit praesentium eum earum maiores quam dicta laudantium laborum architecto
         tenetur.</p>
 </body>
